<resources>
    <string name="app_name">ANDROID-EMR</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_add">btn_add</string>
    <string name="hospital_central_de_maputo">Hospital Central de Maputo</string>
    <string name="hospital_geral_jos_macamo">Hospital Geral José Macamo</string>
    <string name="cl_nica_privada_de_maputo">Clínica Privada de Maputo</string>
    <string name="comando_geral_da_pol_cia">Comando Geral da Polícia</string>
    <string name="cruz_vermelha">Cruz Vermelha</string>
    <string name="lin_ambul_ncias">Lin Ambulâncias</string>
    <string name="medica_o">medicação</string>
    <string name="exames">exames</string>
    <string name="tratamentos">tratamentos</string>
    <string name="vacina">vacina</string>
    <string name="hist_rico">histórico</string>
    <string name="alergias">alergias</string>
    <string name="logo">Logo</string>
    <string name="get_started">Get Started</string>
    <string name="identifica_o">Identificação</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="bi">BI</string>
    <string name="g_nero">Gênero</string>
    <string name="contacto">contacto</string>
    <string name="endere_0">Endereç0</string>
    <string name="n_mero_de_telefone">Número de Telefone</string>
    <string name="email">Email</string>
    <string name="informa_es_de_emerg_ncia">informações de emergência</string>
    <string name="contacto_de_emerg_ncia">Contacto de Emergência</string>
    <string name="rela_o">Relação</string>
    <string name="seguro_de_sa_de">Seguro de saúde</string>
    <string name="nome_do_seguro">Nome do Seguro</string>
    <string name="n_mero_de_ap_lice">Número de Apólice</string>
    <string name="email_da_seguradora">Email da seguradora</string>
    <string name="contacto_da_seguradora">Contacto da seguradora</string>
    <string name="informa_es_adicionais">informações adicionais</string>
    <string name="nacionalidade">Nacionalidade</string>
    <string name="estado_civil">Estado civil</string>
    <string name="profiss_o">Profissão</string>
    <string name="grupo_sangu_neo">Grupo Sanguíneo</string>
    <string name="emerg_ncia">emergência</string>
    <string name="hospitais_pr_ximos">Hospitais próximos</string>
    <string name="medication">Medication</string>
    <string name="_1_comprimido">1 comprimido</string>
    <string name="_8_8_horas">8-8 horas</string>
    <string name="f_stula_obst_trica_afecta_mais_de_quatro_mil_mulheres_por_ano_no_pa_s">Fístula obstétrica afecta mais de quatro mil mulheres por ano no país</string>
    <string name="pelo_menos_quatro_mil_mulheres_contraem_a_f_stula_obst_tricaespecialist">Pelo menos quatro mil mulheres contraem a fístula obstétricaespecialist...</string>
    <string name="todo">TODO</string>
    <string name="news_pic">news pic</string>
    <string name="vaccine">Vaccine</string>
    <string name="_20_12_2010">20/12/2010</string>
</resources>