<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/fitstRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/medicationBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/baseline_medication_75"
            android:text="@string/medica_o"
            android:textAlignment="center"
            android:textColor="#43A047"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/historyBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/baseline_medical_information_24"
            android:text="@string/hist_rico"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/examBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/teste"
            android:text="@string/exames"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/treatmetBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/tratamento"
            android:text="@string/tratamentos"
            android:textAlignment="center"
            android:textColor="#43A047"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/allergyBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="add"
            android:drawableTop="@drawable/alergia"
            android:text="@string/alergias"
            android:textAlignment="center"
            android:textColor="#43A047"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/vaccinationBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/baseline_vaccines"
            android:text="@string/vacina"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck" />
    </LinearLayout>

</LinearLayout>