<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"

        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:outlineSpotShadowColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/medicationNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medication"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/dosageTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/_1_comprimido"
                android:textColor="@color/black"
                android:textSize="14sp"
                 />
            <TextView
                android:id="@+id/instructionsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                android:text="@string/_8_8_horas"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>